--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@ document.querySelectorAll(".stat-item").forEach(stat => {
 });
 
 </script>
-
+<script src="script.js"></script>
 </body>
 </html>
