--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ fetch("components/CoursesSection.html")
         
         document.body.insertAdjacentHTML("beforeend", data);
         const year = new Date().getFullYear();
-        document.getElementById("copyright").innerText = `© ${year} EduLearn. All rights reserved.`;
+        document.getElementById("copyright").innerText = `© ${year} EduTech. All rights reserved.`;
       });
 </script>
 </head>
